# htr-grocery-list

.devcontainer/: devcontainer.json
backend/: pyproject.toml
frontend/: package.json
