[project]
name = "htr-grocery-list-server"
version = "1"
description = ""
authors = [
    {name = "Lance Judan",email = "aperture.phoenix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
